browser/themes/shared/customizableui/customizeMode.inc.css
/* ... */
#
customization
-
lwtheme
-
menu
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowcontent
{
/
*
Make
the
panel
padding
uniform
across
all
platforms
due
to
the
styling
of
the
section
headers
and
footer
.
*
/
padding
:
10px
;
}
#
customization
-
uidensity
-
menu
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowcontent
{
padding
:
5px
10px
;
}
.
customization
-
uidensity
-
menuitem
>
.
menu
-
iconic
-
left
>
.
menu
-
iconic
-
icon
.
customization
-
lwtheme
-
menu
-
theme
>
.
toolbarbutton
-
icon
{
width
:
32px
;
height
:
32px
;
margin
:
5px
;
}
.
customization
-
uidensity
-
menuitem
.
customization
-
lwtheme
-
menu
-
theme
{
-
moz
-
appearance
:
none
;
border
:
1px
solid
transparent
;
margin
:
0
-
5px
5px
;
padding
-
top
:
0
;
padding
-
inline
-
end
:
5px
;
padding
-
bottom
:
0
;
padding
-
inline
-
start
:
0
;
}
.
customization
-
uidensity
-
menuitem
{
color
:
inherit
;
}
.
customization
-
lwtheme
-
menu
-
theme
[
defaulttheme
]
{
list
-
style
-
image
:
url
(
chrome
:
/
/
browser
/
content
/
default
-
theme
-
icon
.
svg
)
;
}
#
customization
-
uidensity
-
menuitem
-
normal
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
customizableui
/
density
-
normal
.
svg
"
)
;
}
#
customization
-
uidensity
-
menuitem
-
compact
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
customizableui
/
density
-
compact
.
svg
"
)
;
}
#
customization
-
uidensity
-
menuitem
-
touch
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
customizableui
/
density
-
touch
.
svg
"
)
;
}
.
customization
-
uidensity
-
menuitem
[
active
=
"
true
"
]
.
customization
-
uidensity
-
menuitem
:
hover
.
customization
-
lwtheme
-
menu
-
theme
[
active
=
"
true
"
]
.
customization
-
lwtheme
-
menu
-
theme
:
hover
{
background
-
color
:
var
(
-
-
arrowpanel
-
dimmed
)
;
border
-
color
:
var
(
-
-
panel
-
separator
-
color
)
;
}
.
customization
-
uidensity
-
menuitem
[
active
=
"
true
"
]
.
customization
-
uidensity
-
menuitem
:
hover
:
active
.
customization
-
lwtheme
-
menu
-
theme
[
active
=
"
true
"
]
.
customization
-
lwtheme
-
menu
-
theme
:
hover
:
active
{
background
-
color
:
var
(
-
-
arrowpanel
-
dimmed
-
further
)
;
}
.
customization
-
uidensity
-
menuitem
>
.
menu
-
iconic
-
text
.
customization
-
lwtheme
-
menu
-
theme
>
.
toolbarbutton
-
text
{
text
-
align
:
start
;
}
.
customization
-
uidensity
-
menuitem
>
.
menu
-
iconic
-
text
{
font
:
menu
;
}
#
customization
-
lwtheme
-
menu
-
header
#
customization
-
lwtheme
-
menu
-
recommended
{
padding
:
10px
;
margin
-
bottom
:
5px
;
text
-
align
:
center
;
font
-
weight
:
500
;
border
-
bottom
:
1px
solid
var
(
-
-
panel
-
separator
-
color
)
;
}
#
customization
-
lwtheme
-
menu
-
header
#
customization
-
lwtheme
-
menu
-
recommended
#
customization
-
lwtheme
-
menu
-
footer
{
margin
-
right
:
-
10px
;
margin
-
left
:
-
10px
;
}
#
customization
-
lwtheme
-
menu
-
header
{
margin
-
top
:
-
10px
;
}
#
customization
-
lwtheme
-
menu
-
recommended
{
border
-
top
:
1px
solid
var
(
-
-
panel
-
separator
-
color
)
;
}
#
customization
-
lwtheme
-
menu
-
footer
{
background
:
linear
-
gradient
(
var
(
-
-
arrowpanel
-
dimmed
)
60
%
transparent
)
border
-
box
;
border
-
top
:
1px
solid
var
(
-
-
arrowpanel
-
dimmed
)
;
margin
-
bottom
:
-
10px
;
}
.
customization
-
lwtheme
-
menu
-
footeritem
{
-
moz
-
appearance
:
none
;
-
moz
-
box
-
flex
:
1
;
color
:
inherit
;
border
-
style
:
none
;
padding
:
10px
;
margin
-
left
:
0
;
margin
-
right
:
0
;
}
.
customization
-
lwtheme
-
menu
-
footeritem
:
hover
{
background
:
linear
-
gradient
(
var
(
-
-
arrowpanel
-
dimmed
)
40
%
transparent
)
padding
-
box
;
}
.
customization
-
lwtheme
-
menu
-
footeritem
:
first
-
child
{
border
-
inline
-
end
:
1px
solid
var
(
-
-
panel
-
separator
-
color
)
;
}
#
customization
-
panelWrapper
>
.
panel
-
arrowcontent
{
color
:
var
(
-
-
arrowpanel
-
color
)
;
background
:
var
(
-
-
arrowpanel
-
background
)
;
background
-
clip
:
padding
-
box
;
%
ifdef
XP_MACOSX
/
*
Native
styling
adds
more
'
oompf
'
to
the
popup
box
-
shadow
so
simulate
that
*
as
best
as
we
can
here
:
*
/
border
:
1px
solid
var
(
-
-
arrowpanel
-
dimmed
-
even
-
further
)
;
box
-
shadow
:
0
4px
10px
hsla
(
0
0
%
0
%
.
3
)
;
-
moz
-
appearance
:
none
;
border
-
radius
:
var
(
-
-
arrowpanel
-
border
-
radius
)
;
%
else
border
:
1px
solid
var
(
-
-
arrowpanel
-
border
-
color
)
;
box
-
shadow
:
0
0
4px
hsla
(
0
0
%
0
%
.
2
)
;
%
endif
}
#
customization
-
panelWrapper
>
.
panel
-
arrowbox
{
position
:
relative
;
height
:
10px
;
margin
-
bottom
:
-
1px
;
}
/
*
The
overflow
button
icon
_looks_
disabled
but
is
also
shown
as
[
open
]
.
*
/
#
nav
-
bar
[
customizing
]
>
.
overflow
-
button
{
/
*
This
color
is
the
hard
-
coded
#
4c4c4c
at
40
%
opacity
as
found
in
toolbarbutton
-
icons
.
inc
.
css
*
/
fill
:
hsla
(
0
0
%
30
%
.
4
)
;
}
#
nav
-
bar
[
customizing
]
>
.
overflow
-
button
>
.
toolbarbutton
-
icon
{
background
-
color
:
var
(
-
-
toolbarbutton
-
active
-
background
)
;
opacity
:
1
;
}
/* ... */

